css/style.css
@import url(variables.css);

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: "Poppins", sans-serif;
  scroll-behavior: smooth;
  background-color: transparent;
}

body {
  width: auto;
  padding: 2svh 3vw;
  display: flex;
  height: 100svh;
  background-color: var(--background-color);
  color: var(--text-color);
  column-gap: 2vw;
}

i.bx {
  padding: 1em;
  vertical-align: center;
}

aside {
  display: flex;
  width: 20%;
  flex-direction: column;
  align-items: center;
  padding: 3svh 2vw;
  justify-content: space-between;
  background-color: var(--secondary-background-color);
  border-radius: 2rem;
  border: var(--border);
}

aside nav ul li {
  padding: 0.5em 0;
}

aside nav ul li a {
  text-decoration: none;
  color: var(--text-color);
}

#cart {
  padding-top: 5em;
}

footer {
  align-self: flex-start;
}

main {
  width: 80%;
  background-color: var(--secondary-background-color);
  overflow-y: scroll;
  padding: 3svh 2vw;
  border-radius: 2rem;
  border: var(--border);
}

.header {
  display: flex;
  justify-content: space-between;
}

.header i {
  font-size: 1.5em;
  color: var(--primary-color);
  background-color: var(--background-color);
  padding: 0;
}

i.bx.bx-sun, i.bx.bx-moon {
  width: 1.5em;
  height: 1.5em;
  display:flex;
  justify-content: center;
  align-items: center;
  border-radius: 50%;
  box-shadow: var(--shadow);
  cursor: pointer;
}

main section {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  grid-template-rows: auto;
  gap: 2svh 2vw;
}

main section article {
  background-color: var(--tertiary-background-color);
  border-radius: 2em;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  box-shadow: var(--shadow);
}

main section article img {
  width: 100%;
  border-radius: 2rem 2rem 0 0;
  max-height: 350px;
  margin-bottom: 0;
  object-fit: cover;
}

h1 {
  color: var(--primary-color);
}

h2 {
  color: var(--primary-color);
  padding-bottom: 1em;
}

.cart-view {
  display:flex;
  flex-direction: column;
  row-gap: 1.5em;
}

.cart-view article {
  width: 100%;
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
  grid-template-rows: auto;
  justify-items: center;
  align-items: center;
  background-color: var(--tertiary-background-color);
  border: var(--border);
  justify-content: space-evenly;
  padding: 1em;
  row-gap: 0;
  text-align: center;
}

.cart-view article * {
  background-color: transparent;
}

.cart-view article img {
  min-width: 100px;
  width: 15%;
  max-height: 100px;
}

.cart-view > div {
  display:flex;
  justify-content: space-between;
  padding: 1em;
}

#confirm-payment {
  display: grid;
  grid-template-columns: 1fr 2.5fr;
  grid-template-rows: 1fr 1fr;
  grid-template-areas:
  "total_label buy-bt"
  "total buy-bt";
  gap: 0.5em 2em;
}

#confirm-payment p:first-child {
  grid-area: total_label;
}

#confirm-payment p:last-child {
  grid-area: total;
}

#confirm-payment a {
  grid-area: buy-bt;
  align-self: center;
  justify-self: center;
  width: 100%;
  text-decoration: none;
  text-align: center;
  color: var(--primary-color);
  border-radius: 2em;
  padding: 0.5em 1em;
  border: 1px solid var(--primary-color);
  background-color: var(--background-color);
}

section a {
  text-decoration: none;
  text-align: center;
  align-self: center;
  color: var(--primary-color);
  border-radius: 2em;
  padding: 0.5em 1em;
  border: 1px solid var(--primary-color);
  background-color: var(--background-color);
}

.cart-view article i {
  color: var(--primary-color);
  font-size: 1.5em;
}

.navigation li {
  padding: 1.2em 0;
}

li {
  list-style: none;
}

main section article div {
  width: 100%;
  margin-top: 0;
  border-radius: 0 0 2em 2em;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  padding: 1em 2em;
  row-gap: 0.5em;
  background-color: transparent;
}

main section article div a {
  width: 100%;
  text-decoration: none;
  text-align: center;
  color: var(--primary-color);
  border-radius: 2em;
  padding: 0.5em 1em;
  border: 1px solid var(--primary-color);
  background-color: var(--background-color);
}

.toggle {
  display: none;
}

.navigation {
  display: none;
}

@media (max-width: 900px) {
  body {
    flex-direction: column;
    align-items: center;
    height: auto;
    padding-top: 0;
  }

  .toggle {
    display: flex;
    width: 100vw;
    justify-content: space-between;
    background-color: var(--tertiary-background-color);
    align-items: center;
    height:8svh;
    padding: 2em 2vw;
  }

  aside {
    display: none;
  }

  main {
    background-color: transparent;
    text-align: center;
    width: 100%;
    padding: 1.5em 5vw 0 5vw;
    border: none;
  }

  .cart-view > div {
    flex-direction: column;
  }
  
  #confirm-payment {
    padding-top: 1.5em;
  }

  .toggle div {
    width: 35px;
    height: 35px;
    display: block;
    cursor: pointer;
    background: var(--menu-icon);
    background-size: 35px;
    background-position: center;
    background-repeat: no-repeat;
    z-index: 11;
  }

  .toggle.active div {
    position: fixed;
    right: 8vw;
    background: var(--close-icon);
    background-size: 35px;
    background-position: center;
    background-repeat: no-repeat;
    z-index: 11;
  }

  #dark-mode-toggle {
    display: none;
  }

  #dark-mode-toggle.active {
    display:block;
    position: fixed;
    display: flex;
    justify-content: center;
    align-items: center;
    left: 8vw;
    z-index: 11;
    cursor: pointer;
  }

  .navigation.active {
    display: block;
    position: fixed;
    top: 0svh;
    right: 0;
    width: 100%;
    height: 100vh;
    display: flex;
    row-gap: 0.1em;
    justify-content: center;
    flex-direction: column;
    font-size: 1.2em;
    background: var(--secondary-background-color);
    color: var(--text-color);
    font-weight: bold;
    z-index: 10;
    align-items: center;
  }

  .navigation li a {
    text-decoration: none;
    color: var(--text-color)
  }

  .navigation.active li a:active {
    color: var(--primary-color);
  }
}

